// Activity 服务 Proto 定义文件（外部服务）
//
// 文件说明：
//   定义活动模块的对外 gRPC 服务接口，供 Gateway API 调用。
//   包含活动 CRUD、状态操作、搜索、分类标签等功能。
//
// 字段编号规划：
//   - 1-50：基础字段
//   - 51-80：扩展字段
//   - 81-100：预留字段
//   ⚠️ 警告：字段编号一旦发布使用后不可更改或复用！
//
// 生成命令：
//   cd app/activity/rpc
//

syntax = "proto3";

package activity;//   goctl rpc protoc ticket.proto --go_out=./pb --go-grpc_out=./pb --zrpc_out=.


option go_package = "./pb";


// ActivityService 活动服务（外部）

service ActivityService {
  // ==================== 报名核销相关接口 ====================

  // RegisterActivity 报名活动
  rpc RegisterActivity(RegisterActivityRequest) returns (RegisterActivityResponse);

  // CancelActivities 取消报名活动
  rpc CancelActivities(CancelActivityRequest) returns (CancelActivityResponse);

  // GetActivityList 获取待参加/已参加活动信息列表
  rpc GetActivityList(GetActivityListRequest) returns (GetActivityListResponse);

  // VerifyTicket 核销票券
  rpc VerifyTicket(VerifyTicketRequest) returns (VerifyTicketResponse);

  // GetTicketList 获取个人票券列表
  rpc GetTicketList(GetTicketListRequest) returns (GetTicketListResponse);

  // GetTicketDetail 获取票券详情
  rpc GetTicketDetail(GetTicketDetailRequest) returns (GetTicketDetailResponse);

}

// ============================================================================
//  报名活动
// ============================================================================

// 报名活动请求
message RegisterActivityRequest {
  int64 activity_id = 1;  // 活动ID
}

// 报名活动响应
message RegisterActivityResponse {
  string result = 1;
  string reason = 2;
}

// ============================================================================
// 取消报名活动
// ============================================================================

// 取消报名活动请求
message CancelActivityRequest {
  int64 activity_id = 1;  // 活动ID
}

// 取消报名活动响应
message CancelActivityResponse {
  string result = 1;
}

// ============================================================================
// 获取待参加/已参加活动信息列表
// ============================================================================

// 获取活动列表请求
message GetActivityListRequest {
  int32 page = 1;      // 页码
  int32 page_size = 2; // 每页数量
  string type = 3; // 类型：待参加/已参加
}

// 获取活动列表响应
message GetActivityListResponse {
  int32 total = 1;                    // 总数
  repeated ActivityListItems items = 2; // 活动列表项
  int32 page = 3;                     // 当前页
  int32 page_size = 4;                // 每页数量
}

// 活动列表项
message ActivityListItems {
  int64 id = 1;                    // 活动ID
  string name = 2;                 // 活动名称
  string time = 3;                 // 活动时间，格式："2024-01-01 14:00:00"
  string status = 4;               // 状态，如："进行中"、"已结束"、"待开始"
  string image_url = 5;            // 活动图片URL
}

// ============================================================================
// 核销票券
// ============================================================================

// 核销票券请求
message VerifyTicketRequest {
  int64 activity_id = 1;   // 活动ID
  string ticket_code = 2;  // 票券码
  string totp_code = 3;    // TOTP动态码（6位数字）
}

// 核销票券响应
message VerifyTicketResponse {
  string result = 1;  // 核销结果，如："核销成功"、"核销失败"
}

// ============================================================================
// 获取个人票券列表
// ============================================================================

// 获取个人票券列表请求
message GetTicketListRequest {
  int32 page = 1;      // 页码
  int32 page_size = 2; // 每页数量
}

// 获取个人票券列表响应
message GetTicketListResponse {
  int32 total = 1;                    // 总数
  repeated TicketListItem items = 2;  // 票券列表项
  int32 page = 3;                     // 当前页
  int32 page_size = 4;                // 每页数量
}

// 票券列表项
message TicketListItem {
  int64 ticket_id = 1;                // 票券ID
  int64 activity_id = 2;              // 活动ID
  string activity_name = 3;           // 活动名称
  string activity_time = 4;           // 活动时间，格式："2024-03-15 09:00:00"
  string activity_image_url = 5;      // 活动图片URL
  int32 status = 6;                   // 核销状态：0-未核销，1-已核销
}

// ============================================================================
// 获取票券详情
// ============================================================================

// 获取票券详情请求
message GetTicketDetailRequest {
  int64 ticket_id = 1;  // 票券ID
}

// 获取票券详情响应
message GetTicketDetailResponse {
  int64 ticket_id = 1;        // 票券ID
  string ticket_code = 2;     // 票券码
  int64 activity_id = 3;      // 活动ID
  string activity_name = 4;   // 活动名称
  string activity_time = 5;   // 活动时间，格式："2024-03-15 09:00:00"
  string qr_code_url = 6;     // 二维码图片URL
}
